RESOLVED FIXED212861
HTMLMediaElement::m_waitingToEnterFullscreen is not initialized in the constructor
https://bugs.webkit.org/show_bug.cgi?id=212861
Summary HTMLMediaElement::m_waitingToEnterFullscreen is not initialized in the constr...
Peng Liu
Reported 2020-06-05 19:46:12 PDT
HTMLMediaElement::m_waitingToEnterFullscreen is not initialized in the constructor
Attachments
Patch (1.37 KB, patch)
2020-06-05 19:48 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-06-05 19:46:53 PDT
Peng Liu
Comment 2 2020-06-05 19:48:39 PDT
EWS
Comment 3 2020-06-05 20:36:11 PDT
Committed r262668: <https://trac.webkit.org/changeset/262668> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401225 [details].
Note You need to log in before you can comment on or make changes to this bug.