HTMLMediaElement::m_waitingToEnterFullscreen is not initialized in the constructor https://bugs.webkit.org/show_bug.cgi?id=212861

Reviewed by Jer Noble.

Covered by existing tests.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::HTMLMediaElement):


Canonical link: https://commits.webkit.org/225667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262668 268f45cc-cd09-0410-ab3c-d52691b4dbfc